[gd_scene load_steps=5 format=3 uid="uid://tsuajrij4xet"]

[ext_resource type="Script" path="res://CrackedIce/Entities/NPC/Cars/base/base_car.gd" id="1_423tv"]
[ext_resource type="PackedScene" uid="uid://8sl5gmdd6o6w" path="res://cars/camera/camera_3d.tscn" id="2_lwy55"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mm2gk"]
size = Vector3(1.9717, 1.4447, 2.63189)

[sub_resource type="LabelSettings" id="LabelSettings_yc8e5"]
font_size = 32

[node name="car" type="VehicleBody3D"]
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("1_423tv")

[node name="WheelFrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03343, 0.340338, -1.57977)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="WheelFrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02622, 0.340338, -1.57977)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="WheelRearRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.03343, 0.340338, 1.51869)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="WheelRearLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02622, 0.340338, 1.51869)
use_as_traction = true
wheel_roll_influence = 0.5
wheel_radius = 0.431
wheel_rest_length = 0.3
wheel_friction_slip = 3.0
suspension_stiffness = 30.0
suspension_max_force = 10000.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.689432, -0.062412)
shape = SubResource("BoxShape3D_mm2gk")

[node name="look" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2149, 0)

[node name="Camera3D" parent="look" instance=ExtResource("2_lwy55")]
transform = Transform3D(1, 0, 0, 0, 0.974347, 0.225053, 0, -0.225053, 0.974347, 0, 1.97324, 6.19962)
target_distance = 101

[node name="Hud" type="CanvasLayer" parent="."]
layer = 2

[node name="speed" type="Label" parent="Hud"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="Hud"]
offset_right = 40.0
offset_bottom = 23.0
text = "Arow keys to drive
Space to drift and break
"
label_settings = SubResource("LabelSettings_yc8e5")
